# moveit2_2025

./: .gitignore  README.md
hello_moveit/: package.xml
hello_moveit/src/: planning_arround.cpp  visualize_in_rviz.cpp
mtc_tutorial/: CMakeLists.txt
mtc_tutorial/launch/: mtc_demo.launch.py  mtc_demo_custom.launch.py
mtc_tutorial/src/: mtc_node.cpp  mtc_node_custom_goal.cpp
mycobot_ros2/mycobot_bringup/: CMakeLists.txt  package.xml
mycobot_ros2/mycobot_bringup/scripts/: mycobot_280_gazebo.sh  mycobot_280_mtc_demos.sh
mycobot_ros2/mycobot_description/: CMakeLists.txt  README.md  package.xml
mycobot_ros2/mycobot_gazebo/: CMakeLists.txt  package.xml
mycobot_ros2/mycobot_gazebo/worlds/: empty.world
mycobot_ros2/mycobot_moveit_config/: .setup_assistant
mycobot_ros2/mycobot_moveit_config/launch/: move_group.launch.py
mycobot_ros2/mycobot_moveit_demos/: package.xml
mycobot_ros2/mycobot_moveit_demos/src/: hello_moveit.cpp  plan_around_objects.cpp
mycobot_ros2/mycobot_mtc_demos/src/: cartesian.cpp
mycobot_ros2/mycobot_ros2/: README.md  package.xml
mycobot_ros2/mycobot_system_tests/: package.xml
mytmux/tmuxinator_conf/: .tmuxinator.yml
mytmux/tmuxinator_conf/gesture/: .tmuxinator.yml
mytmux/tmuxinator_conf/yolo/: .tmuxinator.yml
robotiq_description/: CMakeLists.txt
rom_ur5_moveit_config/: package.xml
rom_ur5_moveit_config/config/: ur.srdf
rom_ur5_moveit_config/launch/: warehouse_db.launch.py
rom_ur_sim/: package.xml
rom_ur_sim/launch/: spawn_ur5_camera_gripper_moveit.launch.py  spawn_ur5_camera_moveit.launch.py
rom_ur_sim/rviz/: view_ur5_camera.rviz
rom_ur_sim/urdf/: robotiq_gripper_macro.xacro  ur5_camera.urdf.xacro  ur5_camera_gripper.urdf.xacro  ur5_macro.xacro
ros2_opencv/: setup.py
ros2_opencv/launch/: camera_launch.py  camera_test.py
ros2_opencv/ros2_opencv/: gesture_publisher.py  webcam_sub.py
to_del/hello_moveit/: CMakeLists.txt
to_del/hello_moveit/src/: hello_moveit.cpp
to_del/mtc_tutorial/: package.xml
to_del/mtc_tutorial/src/: mtc_node.cpp
to_del/mycobot_ros2/: README.md
to_del/mycobot_ros2/mycobot_moveit_config/: CMakeLists.txt  package.xml
to_del/mycobot_ros2/mycobot_mtc_demos/: CMakeLists.txt  package.xml
to_del/mycobot_ros2/mycobot_system_tests/: CMakeLists.txt
to_del/ros2_opencv/: package.xml
to_del/ros2_opencv/launch/: camera_test.py
to_del/ros2_opencv/ros2_opencv/: gesture_control.py  webcam_pub.py
ui/: bolt_selector.py
ur/Universal_Robots_ROS2_Description-jazzy/launch/: view_ur.launch.py
ur/robotiq_description/urdf/: robotiq_gripper.ros2_control.xacro
ur/rom_ur5_moveit_config/: .setup_assistant  package.xml
ur/rom_ur5_moveit_config/config/: joint_limits.yaml  joint_limits_with_accel_true.yaml  ur.srdf  ur.urdf.xacro
ur/rom_ur5_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py
ur/rom_ur_sim/config/: ur5_controllers_gripper.yaml
ur/rom_ur_sim/launch/: old_spawn_ur5_camera_gripper_moveit_table.launch.py  spawn_ur5_camera.launch.py  spawn_ur5_camera_85_gripper.launch.py  spawn_ur5_camera_gripper_moveit.launch.py  test.launch.py  test2.launch.py  view_ur5_camera_85_gripper.launch.py
ur/rom_ur_sim/rviz/: config_ur5_robotiq.rviz  moveit.rviz
ur/rom_ur_sim/scripts/: arm_control_from_UI.py
ur/rom_ur_sim/src/: mtc.cpp  mtc_task_node.cpp
ur/rom_ur_sim/urdf/: camera_ign.xacro  robotiq_gripper.ros2_control.xacro  robotiq_gripper_macro.xacro  ur5_camera_85_gripper.urdf.xacro  ur5_camera_gripper.urdf.xacro  ur5_macro.xacro
ur5/Universal_Robots_ROS2_Description-jazzy/urdf/: ur_macro.xacro
ur5/robotiq_description/urdf/: robotiq_2f_85_macro.urdf.xacro
ur5/rom_add_collision/: CMakeLists.txt  package.xml
ur5/rom_add_collision/src/: 0_add_table_collision.cpp  1_hello_moveit.cpp  1_hello_moveit_backup.cpp  2_gesture_moveit_topic.cpp  3_gesture_moveit_service.cpp  4_service_caller.cpp  4_service_caller.cppbackup  5_arm_controller_from_ui.bk.cpp  5_arm_controller_from_ui.cpp  5_arm_controller_from_ui.cpp.backup  5_arm_controller_from_ui_mtc.cpp  6_arm_controller_from_ui_test_publisher.cpp  7_arm_controller_from_ui_mtc.cpp  7_arm_controller_from_ui_mtc.cpp.backup  99_prototype.py  add_table_collision.cpp  go_pose_publisher.cpp  ur_pick_and_place.cpp  ur_pick_and_place_moveit.cpp
ur5/rom_dynamics_moveit/: .setup_assistant  CMakeLists.txt  package.xml
ur5/rom_dynamics_moveit/config/: sensors_3d.yaml  ur.srdf  ur.urdf.xacro
ur5/rom_dynamics_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ur5/rom_ur5_moveit_config/: .setup_assistant  CMakeLists.txt
ur5/rom_ur5_moveit_config/config/: moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ur.srdf  ur.urdf.xacro
ur5/rom_ur5_moveit_config/launch/: demo.launch.py  rsp.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
ur5/rom_ur_sim/: CMakeLists.txt  package.xml
ur5/rom_ur_sim/launch/: old_spawn_ur5_camera_gripper_moveit_table_yolo.launch.py  old_spawn_ur5_camera_gripper_moveit_table_yolo.launch.py.backup  spawn_ur5_camera.launch.py  spawn_ur5_camera_gripper.launch.py  spawn_ur5_camera_gripper_moveit.launch.py  spawn_ur5_camera_gripper_moveit_table.launch.py  spawn_ur5_camera_gripper_moveit_table_yolo.launch.py  spawn_ur5_camera_gripper_moveit_table_yolo_mt.launch.py  test.launch.py  test2.launch.py  view_ur5_camera.launch.py  view_ur5_camera_gripper.launch.py
ur5/rom_ur_sim/rviz/: moveit.rviz
ur5/rom_ur_sim/src/: arm_control_from_ui.cpp  arm_control_from_ui_test.cpp
ur5/rom_ur_sim/urdf/: camera.xacro  camera_ign.xacro  ur5_camera.urdf.xacro  ur5_camera_gripper.urdf.xacro
ur5/rom_ur_sim/worlds/: new_world.sdf  rom_arm_on_the_table.sdf
ur5/rom_ur_sim/worlds/Threshold_Basket_Natural_Finish_Fabric_Liner_Small/: model.sdf
ur5/rom_ur_sim/worlds/bolt/: model.sdf
ur5/rom_ur_sim/worlds/camera/: camera_model.sdf
yolov8_obb/scripts/: yolov8_obb_publisher.py  yolov8_obb_subscriber.py
(+22 files in other folders)
