<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rom_add_collision</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="server01.psa1981@gmail.com">mr_robot</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>std_msgs</depend>

  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_core</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_ros_planning</depend>

  <depend>moveit_task_constructor_core</depend>
  <depend>moveit_task_constructor_msgs</depend>
  <!-- <depend>moveit_task_constructor_solvers</depend>
  <depend>moveit_task_constructor_stages</depend> -->

  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
