<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rom_ur_sim</name>
  <version>0.0.0</version>
  <description>ur5 simulation</description>
  <maintainer email="server01.psa1981@gmail.com">mr_robot</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path = "/home/mr_robot/devel_ws/install/rom_ur_sim/share/" />
    <gazebo_ros  gazebo_model_path = "/home/mr_robot/devel_ws/install/robotiq_description/share/"/>
    
  </export>
</package>
