<package format="3">
  <name>mycobot_mtc_demos</name>
  <version>0.0.1</version>
  <description>MyCobot MTC demo package</description>
  <maintainer email="hnin21@todo.com">hnin21</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>moveit_task_constructor_msgs</depend>
  <depend>moveit_visual_tools</depend>
  <depend>tf2_eigen</depend>

  <exec_depend>launch_ros</exec_depend>
</package>
